syntax = "proto3";

package auth;

message UserLoginRequest {
	string email = 1;
	string password = 2;
}

message UserLoginResponse {
	string token = 1;
}

